# Advent-of-Code

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml  update-badge.yml  year2015.yml  year2021.yml  year2022.yml  year20223.yml  year2023.yml  year2024.yml
crates/generator/: Cargo.toml
crates/helper/: Cargo.toml
crates/runner/: Cargo.toml
crates/runner/src/: main.rs
crates/runner/template/: lib-mod.rs
crates/year2015/: Cargo.toml
crates/year2021/: Cargo.toml
crates/year2022/: Cargo.toml  README.md
crates/year2023/: Cargo.toml  README.md  day23-p1.elkt  day23-p2.elkt
crates/year2024/: Cargo.toml  README.md
crates/year2025/: Cargo.toml  README.md
generator/: Cargo.toml
generator/src/: main.rs
helper/src/: lib.rs
year2015/: Cargo.toml  README.md
year2015/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs
year2021/: Cargo.toml
year2021/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day12.rs  day13.rs  day16.rs  day17.rs  day19.rs  day22.rs  day23.rs  lib.rs
year2022/: Cargo.toml  README.md
year2022/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs
year2023/: Cargo.toml  README.md
year2023/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  (+19 more)
(+131 files in other folders)
